# mozart

./: .gitignore  README.md  dywm.py  guitar.py  interactive.py  pyproject.toml  requirements.txt  setup.py
src/mozart/: __init__.py  arpeggiator.py  audio_clip.py  drum_clip.py  exceptions.py  midi_clip.py  note_chord.py  pitch_shift.py  sample_clip.py  session.py  track.py  track_mixer.py  wav.py
src/mozart/instrument/: __init__.py  basic_synth.py  bass_synth.py  juno_synth.py  pick_synth.py  signal_clip.py
src/mozart/synths/: guitar.py
src/mozart/wmp/: player.py
tests/: test_arpeggiator.py  test_drum.py  test_session.py  test_synth.py  test_track.py  test_track_mixer.py
tests/songs/: audio_effects.py  daft_punk.py  don't-you-want-me.py  lofi_beat.py
