[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mozart"
version = "0.0.1"
authors = [
  { name="George Honeywood", email="github@honeyfox.uk" },
  { name="Joe Rourke", email="joseph.rourke.2019@live.rhul.ac.uk" },
  { name="Finlay Wilson"},
  { name="Sean Escreet", email="sean@escreet.co.uk" },
]
description = "Python music framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seany067/mozart"
"Bug Tracker" = "https://github.com/seany067/mozart/issues"